<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.alxdaly.legendarysetuphelper.SetupActivity">

    <include layout="@layout/content_start" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gameTitle"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="normal|bold"
            android:textSize="25sp"
            android:fontFamily="monospace"
            android:textColor="#000088" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:text="@string/mastermind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mastermindTitle"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:fontFamily="monospace" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mastermindLabel"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:text="@string/scheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/schemeTitle"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:fontFamily="monospace" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/schemeLabel"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:text="@string/bystanders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bystanderTitle"
                android:fontFamily="monospace"
                android:textSize="20sp"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bystanderLabel"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <TextView
                android:text="@string/villains"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/villainTitle"
                android:fontFamily="monospace"
                android:textSize="20sp"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/villainLabel"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:text="@string/henchmen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/henchmenTitle"
                android:fontFamily="monospace"
                android:textSize="20sp"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20px" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/henchmenLabel"
                    android:fontFamily="monospace"
                    android:textColor="@android:color/white" />

                <TextView
                    android:text="@string/P1hench"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/p1henchLabel"
                    android:fontFamily="monospace"
                    android:textColor="@android:color/white"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <TextView
                android:text="@string/heroes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/heroesTitle"
                android:fontFamily="monospace"
                android:textSize="20sp"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/heroesLabel"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
