<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.alxdaly.legendarysetuphelper.StartActivity">

    <include layout="@layout/content_start" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.07" />

        <TextView
            android:text="Legendary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titleText"
            android:textSize="50sp"
            android:textColor="#000088"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:textAllCaps="true"
            android:fontFamily="sans-serif" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.22" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.46" />

            <Button
                android:text="@string/P1"
                android:layout_height="wrap_content"
                android:id="@+id/buttonP1"
                android:layout_weight="0.46"
                android:layout_width="200sp"
                android:onClick="goToP1Setup" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.46" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.07" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.46" />

            <Button
                android:text="@string/P2"
                android:layout_height="wrap_content"
                android:id="@+id/buttonP2"
                android:layout_weight="0.46"
                android:layout_width="200sp"
                android:onClick="goToP2Setup" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.46" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.07" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.46" />

            <Button
                android:text="@string/P3"
                android:layout_height="wrap_content"
                android:id="@+id/buttonP3"
                android:layout_weight="0.46"
                android:layout_width="200sp"
                android:onClick="goToP3Setup" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.46" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.07" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.46" />

            <Button
                android:text="@string/P4"
                android:layout_height="wrap_content"
                android:id="@+id/buttonP4"
                android:layout_weight="0.46"
                android:layout_width="200sp"
                android:onClick="goToP4Setup" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.46" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.07" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.46" />

            <Button
                android:text="@string/P5"
                android:layout_height="wrap_content"
                android:id="@+id/buttonP5"
                android:layout_weight="0.46"
                android:layout_width="200sp"
                android:onClick="goToP5Setup" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.46" />
        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
